--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-three/drei": "^10.0.7",
     "@react-three/fiber": "^9.1.2",
     "@tailwindcss/vite": "^4.1.6",
+    "axios": "^1.6.0",
     "framer-motion": "^12.11.0",
     "lucide-react": "^0.509.0",
     "react": "^19.1.0",
