--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,16 @@
     "express": "^4.18.2",
     "mongoose": "^7.5.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "express-validator": "^7.0.1",
+    "helmet": "^7.0.0",
+    "express-rate-limit": "^6.10.0",
+    "multer": "^1.4.5-lts.1",
+    "cloudinary": "^1.40.0",
+    "nodemailer": "^6.9.4",
+    "stripe": "^13.5.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
