--- a/server/.env.example
+++ b/server/.env.example
@@ -1,5 +1,5 @@
 # Database
-MONGODB_URI=mongodb+srv://ritikrajput4141:3o3A98At8Dehzy8M@cluster0.q0hsrle.mongodb.net/
+MONGODB_URI=mongodb://localhost:27017/skillbridge
 # or use MongoDB Atlas: mongodb+srv://username:password@cluster.mongodb.net/skillbridge
 
 # JWT
