--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,12 @@
 {
   "name": "skillbridge-backend",
   "version": "1.0.0",
-  "description": "SkillBridge backend server",
+  "description": "SkillBridge mentorship platform backend",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "jest"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -14,9 +15,22 @@
     "dotenv": "^16.3.1",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
-    "express-validator": "^7.0.1"
+    "multer": "^1.4.5-lts.1",
+    "cloudinary": "^1.40.0",
+    "nodemailer": "^6.9.4",
+    "express-validator": "^7.0.1",
+    "helmet": "^7.0.0",
+    "express-rate-limit": "^6.10.0",
+    "socket.io": "^4.7.2",
+    "stripe": "^13.5.0",
+    "moment": "^2.29.4"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
-  }
+    "nodemon": "^3.0.1",
+    "jest": "^29.6.2",
+    "supertest": "^6.3.3"
+  },
+  "keywords": ["mentorship", "education", "career", "nodejs", "express", "mongodb"],
+  "author": "SkillBridge Team",
+  "license": "MIT"
 }
